crates/ui/src/view/snapshots/tgt_ui__view__palette__tests__empty_query_lists_recency_then_commands_100x30.snap
---
source: crates/ui/src/view/palette.rs
expression: rendered
---
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                    ╭──────────────────────── palette ─────────────────────────╮                    
                    │  ›                                                       │                    
                    │  ──────────────────────────────────────────────────────  │                    
                    │  ▏ Bob                                                   │                    
                    │    Alice                                                 │                    
                    │    Toggle theme                                     cmd  │                    
                    │    Telemetry settings                               cmd  │                    
                    │    Send file                                        cmd  │                    
                    │    Log out                                          cmd  │                    
                    │    Quit                                             cmd  │                    
                    │                                                          │                    
                    │                                                          │                    
                    │                                                          │                    
                    │                                                          │                    
                    │                                                          │                    
                    │                                                          │                    
                    │                                                          │                    
                    ╰──────────────────────────────────────────────────────────╯
