crates/ui/src/view/snapshots/tgt_ui__view__palette__tests__no_results_shows_dim_message_100x30.snap
---
source: crates/ui/src/view/palette.rs
expression: rendered
---
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                    ┌──────────────────────── palette ─────────────────────────┐                    
                    │› zzzqqqxx                                                │                    
                    │──────────────────────────────────────────────────────────│                    
                    │                        no matches                        │                    
                    │                                                          │                    
                    │                                                          │                    
                    │                                                          │                    
                    │                                                          │                    
                    │                                                          │                    
                    │                                                          │                    
                    │                                                          │                    
                    │                                                          │                    
                    │                                                          │                    
                    │                                                          │                    
                    │                                                          │                    
                    │                                                          │                    
                    │                                                          │                    
                    └──────────────────────────────────────────────────────────┘
