crates/ui/src/view/snapshots/tgt_ui__view__palette__tests__results_list_with_highlighted_match_spans_100x30.snap
---
source: crates/ui/src/view/palette.rs
expression: rendered
---
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                    ┌──────────────────────── palette ─────────────────────────┐                    
                    │› ali                                                     │                    
                    │──────────────────────────────────────────────────────────│                    
                    │▸ Alice Smith                                             │                    
                    │  Alicia Keys                                             │                    
                    │                                                          │                    
                    │                                                          │                    
                    │                                                          │                    
                    │                                                          │                    
                    │                                                          │                    
                    │                                                          │                    
                    │                                                          │                    
                    │                                                          │                    
                    │                                                          │                    
                    │                                                          │                    
                    │                                                          │                    
                    │                                                          │                    
                    └──────────────────────────────────────────────────────────┘
